--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -284,7 +284,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range di accettazione: $\geq{-10}$\%;
 				\end{itemize}
 				
-			\paragraph[Produttività di codifica]{\hypertarget{pdc}{Produttività di codifica}}
+			\paragraph[Produttività di codifica]{\hypertarget{pc}{Produttività di codifica}}
 			Tale metrica indica il numero medio di linee di codice prodotto per ora/persona, ossia il numero di ore effettive impiegate nell'attività di codifica da parte dei membri del gruppo.
 			\\La misura viene effettuata nel modo seguente:
 				\begin{equation}
@@ -296,7 +296,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range di accettazione: $\geq{3}$;
 				\end{itemize}
 				
-			\paragraph[Test di unità eseguiti]{\hypertarget{tde}{Test di unità eseguiti}}
+			\paragraph[Test di unità eseguiti]{\hypertarget{tue}{Test di unità eseguiti}}
 			Tale metrica indica la percentuale di test di unità eseguiti.
 			\\La misura viene effettuata nel modo seguente:
 				\begin{equation}
@@ -528,7 +528,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 				\item Range di accettazione: $\geq{20}$;
 			\end{itemize}
 			
-			\paragraph[]{\hypertarget{vw}{Validazione W3C}}
+			\paragraph[Validazione W3C]{\hypertarget{vw}{Validazione W3C}}
 			L'\gloss{applicazione web} deve superare correttamente il test di validazione offerto da \gloss{W3C} con un numero di errori gravi pari a zero. Gli avvisi e le inesattezze che non compromettono la funzionalità del sito sono accettate fino a un massimo di 20 per pagina.
 			\\I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
@@ -549,7 +549,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 	~~\hyperlink{tue}{Test di unità eseguiti}						&85-100			&100-100\\
 	~~\hyperlink{tie}{Test di integrazione eseguiti}					&55-100			&70-100\\
 	~~\hyperlink{tse}{Test di sistema eseguiti}						&70-100			&80-100\\
-	~~\hyperlink{tda}{Test di accettazione eseguiti}					&90-100			&100-100\\
+	~~\hyperlink{tae}{Test di accettazione eseguiti}					&90-100			&100-100\\
 	~~\hyperlink{ig}{Indice Gulpease}								&40-100			&50-100\\
 	~~\hyperlink{cco}{Copertura del codice}							&40-100			&60-100\\
 	\hline
@@ -560,15 +560,15 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 	~~\hyperlink{ts}{Test superati}									&90-100			&100-100\\
 	~~\hyperlink{pa}{Profondità annidamento}						&0-10			&0-4\\
 	~~\hyperlink{npcd}{Numero di porzioni di codice duplicate}					&-			&-\\
-	~~\hyperlink{msm}{Numero di statement per metodo}				&0-50			&0-20\\
+	~~\hyperlink{nsm}{Numero di statement per metodo}				&0-50			&0-20\\
 	~~\hyperlink{npm}{Numero di parametri per metodo}				&0-10			&0-4\\
-	~~\hyperlink{mcdc}{Numero di campi dati per classe}				&0-20			&0-10\\
+	~~\hyperlink{ncdc}{Numero di campi dati per classe}				&0-20			&0-10\\
 	~~\hyperlink{nmc}{Numero di metodi per classe}					&0-30			&0-15\\
 	~~\hyperlink{ga}{Gradi di accoppiamento}						&0-7			&0-3\\
 	~~\hyperlink{cci}{Complessità ciclomatica}						&1-15			&1-10\\
 	~~\hyperlink{lmu}{Lunghezza media di un'unità}					&100-500		&100-300\\
-	~~\hyperlink{fo}{Fan-in}										&0-20			&0-5\\
-	~~\hyperlink{fi}{Fan-out}										&0-20			&0-5\\
+	~~\hyperlink{fi}{Fan-in}										&0-20			&0-5\\
+	~~\hyperlink{fo}{Fan-out}										&0-20			&0-5\\
 	~~\hyperlink{rlclc}{Rapporto linee di commento su linee di codice}	&$\geq{20}$		&$\geq{30}$\\
 	~~\hyperlink{vw}{Validazione W3C}								&0-20			&0-0\\
 	\hline
